--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -349,7 +349,7 @@
                         {% csrf_token %}
                         <div class="form-row" style="margin: 0 !important;" >
                         
-                            <div class="col-md-6 mb-3 pt-5" style="box-sizing: border-box" >
+                            <div class="col-md-6 mb-3 pt-5 col-9 pl-3" style="box-sizing: border-box" >
                                 Material Type:
                                 <select style="width:80px" name="material" id="material" required >
                                     {% for material in materials %}
@@ -358,45 +358,45 @@
                                     
                                 </select>
                             </div>
-                            <div class="col-md-6 mb-3 pt-md-5 pt-3" style="box-sizing: border-box">
-                                Your LOGO:
-                                <input type="file" id="logo" name ="logo">
+                            <div class="col-md-6 mb-3 pt-md-5 pt-3">
+                               <span class="pl-3">Your LOGO:</span> 
+                               <input class="d-flex col-9" type="file" id="logo" name ="logo">
                             </div>
                              
-                            <div class="col-md-6 mb-3 px-3 rounded-full">
+                            <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="number" step="0.01" class="form-control" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
                             </div>
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="number" step="0.01" class="form-control" id="thickness" name ="thickness" placeholder="Thickness:" >
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
                             </div>
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="number" step="0.01" class="form-control" id="length" name ="length" placeholder="Length:" >
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
                             </div>
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="number" class="form-control" id="quantity" name ="quantity" placeholder="Quantity:" >
+                                <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
                             </div>
                             
     
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="text" class="form-control" id="name" name ="name" placeholder="Your Name:" required>
+                                <input type="text" class="form-control rounded inputstl" id="name" name ="name" placeholder="Your Name:" required>
                             </div>
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input class="form-control" type="email" name="email" placeholder="Your Email:">
+                                <input class="form-control rounded inputstl" type="email" name="email" placeholder="Your Email:">
                             </div>
     
                             <div class="col-md-6 mb-3 px-3">
                                 
-                                <input type="text" class="form-control" id="phone" name ="phone" placeholder="Your Phone Number:" >
+                                <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Your Phone Number:" >
                             </div> 
                         </div>
                         <div class="text-center mb-3 px-3">
-                            <button type="submit" class="col-md-3 mb-3 btn btn-dark rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                            <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                         </div>
                     </form>    
                 </div>
@@ -408,17 +408,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-md-left text-center py-3">
-                    <a href="https://www.ups.com/track?loc=en_DE&requester=ST/"><button class="w-50 btn btn-dark px-0">UPS TRACKING</button></a>
+                    <a href="https://www.ups.com/track?loc=en_DE&requester=ST/"><button class="w-50 btn btn-dark px-0 rounded">UPS TRACKING</button></a>
                     <img src="../static/assets/img/UPS.png" alt="UPS"/>
                 </div>
 
                 <div class="col-md-4 text-center py-3">
-                    <a href="https://www.fedex.com/en-de/tracking.html"><button class="w-50 btn btn-dark px-0">FEDEX TRACKING</button></a>
+                    <a href="https://www.fedex.com/en-de/tracking.html"><button class="w-50 btn btn-dark px-0 rounded">FEDEX TRACKING</button></a>
                     <img src="../static/assets/img/fed.png" alt="FedEx"/>
                 </div>
 
                 <div class="col-md-4 text-md-right text-center py-3">
-                    <a href="https://www.dhl.de/en/geschaeftskunden/express/verfolgen.html"><button class="w-50 btn btn-dark px-0">DHL Tracking</button></a>
+                    <a href="https://www.dhl.de/en/geschaeftskunden/express/verfolgen.html"><button class="w-50 btn btn-dark px-0 rounded">DHL Tracking</button></a>
                     <img src="../static/assets/img/DHL.png" alt="DHL"/>
                 </div>
 
