--- a/templates/static/assets/css/main.css
+++ b/templates/static/assets/css/main.css
@@ -548,3 +548,13 @@ nav {
         .jumbotron.banner-top {
           height: 70vh !important;
         } }
+
+        .inputstl { 
+          padding: 9px; 
+          border: solid 1px #4B718B; 
+          outline: 0; 
+          background: -webkit-gradient(linear, left top, left 10, from(#FFFFFF), color-stop(4%, #70AB9A), to(#FFFFFF)); 
+          background: -moz-linear-gradient(top, #FFFFFF, #CDDBE4 1px, #FFFFFF 25px); 
+     
+      
+          } 
