--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,14 +14,14 @@
     <link rel="icon" href="../static/assets/img/Intopipe-icon.png"/>
 
     <title>INTOPIPE</title>
-    
+
     <script
             src="https://kit.fontawesome.com/53c82546d4.js"
             crossorigin="anonymous"
     ></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    
+
 
     <link
             rel="stylesheet"
@@ -297,7 +297,7 @@
                                 <p class="thin"><b></b></p>
                                 <p class="thin"></p>
                             </div>
-                            
+
                             <div class="col-md-3 d-none d-md-block">
                                 <div class="single-quote-image left">
                                     <img
@@ -331,7 +331,7 @@
                     </div> -->
                 </div>
 
-                
+
 
                 <div class="col-lg-3 mt-5 mt-md-0 order-3 order-md-2">
                     <img
@@ -347,8 +347,8 @@
                 </div>
 
 
-                    
-                        
+
+
                             <form method="POST" class = "form-horizontal col-12 order-2 d-md-none" style="background-color:#F9F9F9; padding-left: 0 !important; padding-right: 0 !important" id="form_order">
                                 <p class="mb-4 col-12 px-3 pt-3 text-justify">"We work together with some of the
                                     world's biggest manufacturing industries
@@ -361,54 +361,54 @@
                                     <div class="mb-3 px-3 col-12">
                                         <input type="text" class=" form-control rounded inputstl" id="name" name ="name" placeholder="Name:" required>
                                     </div>
-            
+
                                     <div class=" mb-3 px-3 col-12">
                                         <input class="form-control rounded inputstl" type="email" name="email" placeholder="Email:">
                                     </div>
-            
+
                                     <div class=" mb-3 px-3 col-12">
                                         <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Phone Number:" >
                                     </div>
-            
+
                                     <div class="mb-3 px-3 col-12">
                                             <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
                                     </div>
-                                    
-                                    <div class="mb-3 px-3 col-12"> 
+
+                                    <div class="mb-3 px-3 col-12">
                                         <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
                                     </div>
-            
-                                    <div class="mb-3 px-3 col-12">  
-                                         <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >  
+
+                                    <div class="mb-3 px-3 col-12">
+                                         <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
                                     </div>
-            
+
                                     <div class=" px-3 col-12">
                                         <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
-                                    </div> 
-            
+                                    </div>
+
                                     <div class="col-12 mb-3 mt-2 pt-3 d-flex" >
                                         <span class="col-5"> Material Type:</span>
                                         <select style="width:35vw" name="material" id="material" required >
                                             {% for material in materials %}
-                                            <option value={{material.title}} selected>{{material.title}}</option>
+                                            <option value={{material.id}} selected>{{material.title}}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
-            
+
                                     <div class="d-flex col-12 mb-3" >
                                        <span class="col-5">Logo:</span>
                                         <input type="file" id="logo" name ="logo">
                                     </div>
                                 </div>
                                 <div class="text-center mb-3 px-3 col-12">
-                                    <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                                    <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button>
                                 </div>
-                            </form>    
-                        
-                    
-            
+                            </form>
 
-                
+
+
+
+
 
                 <div class=" order-md-3 d-none d-md-block">
                     <form method="POST" class = "form-horizontal pt-4" style="background-color:#F9F9F9;" id="form_order">
@@ -421,7 +421,7 @@
                             <br>
                         {% csrf_token %}
                         <div class="form-row" style="margin: 0 !important;" >
-                        
+
                             <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3">
                                 <span class=" px-0 col-3 small">Name:</span>
                                 <input type="text" class="col-8 form-control rounded inputstl" id="name" name ="name" placeholder="" required>
@@ -431,7 +431,7 @@
                                 <span class="px-0 col-3 small">Email:</span>
                                 <input class="col-8 form-control rounded inputstl" type="email" name="email" placeholder="">
                             </div>
-    
+
                             <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3">
                                 <span class="px-0 col-3 small">Phone Number:</span>
                                 <input type="text" class="col-8 form-control rounded inputstl" id="phone" name ="phone" placeholder="" >
@@ -441,14 +441,14 @@
                                <span class="px-0 col-3 small"> Material Type:</span>
                                 <select class="col-8 inputstl rounded" name="material" id="material" required >
                                     {% for material in materials %}
-                                    <option class="inputstl" value={{material.title}} selected>{{material.title}}</option>
+                                    <option class="inputstl" value={{material.id}} selected>{{material.title}}</option>
                                     {% endfor %}
-                                    
+
                                 </select>
                             </div>
 
-                             
-                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3"> 
+
+                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
                                 <span class="px-0 col-3 small">Inner Diameter:</span>
                                 <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="" >
                             </div>
@@ -467,8 +467,8 @@
                                 <span class="px-0 col-3 small">Quantity:</span>
                                 <input type="number" class="form-control rounded inputstl col-8" id="quantity" name ="quantity" placeholder="" >
                             </div>
-                            
-                            
+
+
 
                             <div class="d-flex  col-md-6 col-11 mb-3 px-3 align-items-center">
                                <span class="pl-0 col-3 small">Logo:</span>
@@ -477,14 +477,14 @@
 
                             <div class="text-center d-flex align-items-center col-md-6 col-11 mb-3 px-3">
                                 <span  class="px-0 col-3"></span>
-                                <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                                <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button>
                             </div>
                         </div>
 
                         <!-- <div class="text-center mb-3 px-3">
-                            <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                            <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button>
                         </div> -->
-                    </form> 
+                    </form>
                 </div>
 
             </div>
@@ -524,7 +524,7 @@
         </div>
     </section>
 
-    
+
 
     <div class="py-3"></div>
 </main>
@@ -559,7 +559,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
 
                 <div class="col-12 col-md-5">
                     <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
@@ -631,7 +631,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="bottom">
         <ul class="nav justify-content-center mb-0">
             <li class="nav-item">
