--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -370,20 +370,24 @@
                                         <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Phone Number:" >
                                     </div>
 
-                                    <div class="mb-3 px-3 col-12">
-                                            <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                                    <div class="d-flex align-items-center mb-3 px-3 col-12">
+                                            <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                                            <span class="pr-2 col-1 small bolder">mm</span>
                                     </div>
 
-                                    <div class="mb-3 px-3 col-12">
-                                        <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
+                                    <div class="d-flex align-items-center mb-3 px-3 col-12">
+                                        <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="thickness" name ="thickness" placeholder="Thickness:" >
+                                        <span class="pr-2 col-1 small bolder">mm</span>
                                     </div>
 
-                                    <div class="mb-3 px-3 col-12">
-                                         <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
+                                    <div class="d-flex align-items-center mb-3 px-3 col-12">
+                                         <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="length" name ="length" placeholder="Length:" >
+                                         <span class="pr-2 col-1 small bolder">mm</span>
                                     </div>
 
-                                    <div class=" px-3 col-12">
-                                        <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
+                                    <div class="d-flex align-items-center px-3 col-12">
+                                        <input type="number" class="form-control rounded inputstl col-11" id="quantity" name ="quantity" placeholder="Quantity:" >
+                                        <span class="pr-2 col-1 small bolder">pcs</span>
                                     </div>
 
                                     <div class="col-12 mb-3 mt-2 pt-3 d-flex" >
@@ -450,22 +454,26 @@
 
                             <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
                                 <span class="px-0 col-3 small">Inner Diameter:</span>
-                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="" >
+                                <input type="number" step="0.01" class="col-7 form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="" >
+                                <span class="pr-2 col-1 small bolder">mm</span>
                             </div>
 
                             <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
                                 <span class="px-0 col-3 small">Thickness:</span>
-                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="thickness" name ="thickness" placeholder="" >
+                                <input type="number" step="0.01" class="col-7 form-control rounded inputstl" id="thickness" name ="thickness" placeholder="" >
+                                <span class="pr-2 col-1 small bolder">mm</span>
                             </div>
 
                             <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
                                 <span class="px-0 col-3 small">Length:</span>
-                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="length" name ="length" placeholder="" >
+                                <input type="number" step="0.01" class="col-7 form-control rounded inputstl" id="length" name ="length" placeholder="" >
+                                <span class="pr-2 col-1 small bolder">mm</span>
                             </div>
 
                             <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
                                 <span class="px-0 col-3 small">Quantity:</span>
-                                <input type="number" class="form-control rounded inputstl col-8" id="quantity" name ="quantity" placeholder="" >
+                                <input type="number" class="form-control rounded inputstl col-7" id="quantity" name ="quantity" placeholder="" >
+                                <span class="pr-2 col-1 small bolder">pcs</span>
                             </div>
 
 
@@ -585,7 +593,7 @@
                                 Germany
                             </li>
                             <li class="nav-item pb-1">
-                                <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
+                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+18502994349</a>
                             </li>
                             <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
