--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -116,7 +116,7 @@
                     <p><i class="fas fa-angle-right"></i></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">fffy</a>
+                    <a class="nav-link active" href="#">Our Story</a>
                 </li>
             </ul>
         </div>
@@ -153,7 +153,7 @@
         <div class="container">
             {% for post in posts %}
                 <div class="row">
-                    <div class="col-md-12 px-md-3">
+                    <div class="px-lg-3">
                         <div class="">
                             <a href=""><h2 class="bolder">{{ post.title }}</h2></a>
                             <span class="c-card__subtitle text-justify"
@@ -162,14 +162,14 @@
                         </div>
                     </div>
 
-                    <div class="d-flex col-md-12 mt-3 h-100">
-                        <p class="thin col-md-6 text-justify order-md-1 order-2">
+                    <div class="d-flex flex-column flex-lg-row mt-3 h-100">
+                        <p class="thin col-lg-6 text-justify order-lg-1 order-2">
                             {{ post.description|safe|striptags }}
                         </p>
 
-                        <a href="" class="col-md-6">
+                        <a href="" class="col-lg-6">
                             <img
-                                    class="img-fluid h-md-100 h-50 w-100 rounded order-md-2 order-1 mb-3  mb-md-0"
+                                    class="img-fluid h-100 w-100 rounded order-lg-2 order-1 mb-3  mb-lg-0"
                                     src="{{ post.post_image.url }}"
                                     alt=""
                             />
@@ -240,7 +240,7 @@
                                 Germany
                             </li>
                             <li class="nav-item pb-1">
-                                <a href="tel:+1 (424) 2530158" class="nav-link pl-0 pt-0">+1 (424) 2530158</a>
+                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+18502994349</a>
                             </li>
                             <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
