--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -37,8 +37,8 @@
     <div class="container">
         <ul class="list-unstyled row d-md-flex mb-0">
             <li class="col-12 col-md-4">
-                <a href="tel:+14242530158">
-                    <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a>
+                <a href="tel:+18502994349">
+                    <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (850) 2994349</a>
             </li>
 
             <li class="col-8 col-md-4">
@@ -372,22 +372,22 @@
 
                                     <div class="d-flex align-items-center mb-3 px-3 col-12">
                                             <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
-                                            <span class="pr-2 col-1 small bolder">mm</span>
+                                            <span class="pl-1 small bolder">mm</span>
                                     </div>
 
                                     <div class="d-flex align-items-center mb-3 px-3 col-12">
                                         <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="thickness" name ="thickness" placeholder="Thickness:" >
-                                        <span class="pr-2 col-1 small bolder">mm</span>
+                                        <span class="pl-1 small bolder">mm</span>
                                     </div>
 
                                     <div class="d-flex align-items-center mb-3 px-3 col-12">
                                          <input type="number" step="0.01" class="form-control rounded inputstl col-11" id="length" name ="length" placeholder="Length:" >
-                                         <span class="pr-2 col-1 small bolder">mm</span>
+                                         <span class="pl-1 small bolder">mm</span>
                                     </div>
 
                                     <div class="d-flex align-items-center px-3 col-12">
                                         <input type="number" class="form-control rounded inputstl col-11" id="quantity" name ="quantity" placeholder="Quantity:" >
-                                        <span class="pr-2 col-1 small bolder">pcs</span>
+                                        <span class="pl-1 small bolder">pcs</span>
                                     </div>
 
                                     <div class="col-12 mb-3 mt-2 pt-3 d-flex" >
@@ -593,7 +593,7 @@
                                 Germany
                             </li>
                             <li class="nav-item pb-1">
-                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+18502994349</a>
+                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+1 (850) 2994349</a>
                             </li>
                             <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
