--- a/templates/pages/plastic_pipe.html
+++ b/templates/pages/plastic_pipe.html
@@ -33,8 +33,8 @@
         <div class="container">
             <ul class="list-unstyled row d-md-flex mb-0">
                 <li class="col-12 col-md-4">
-                    <a href="tel:+14242530158">
-                        <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (424) 2530158</a>
+                    <a href="tel:+18502994349">
+                        <i class="fas fa-phone-volume" aria-hidden="false"></i> +1 (850) 2994349</a>
                 </li>
     
                 <li class="col-8 col-md-4">
@@ -196,8 +196,8 @@
                           </div>
 
                           <div class="mb-auto">
-                            <a href="{% url 'products:plastic-pipe-detail' slug=product.slug %}"><h2
-                                class="mt-4 bolder text-center">{{ product.title }}</h2></a>
+                            <h2
+                                class="mt-4 bolder text-center">{{ product.title }}</h2>
                             <p class="thin text-justify">
 
                                 {{ product.short_content|safe|striptags|truncatewords:56 }}
@@ -272,7 +272,7 @@
                                 Germany
                             </li>
                             <li class="nav-item pb-1">
-                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+18502994349</a>
+                                <a href="tel:+18502994349" class="nav-link pl-0 pt-0">+1 (850) 2994349</a>
                             </li>
                             <li class="nav-item">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.9205478203785!2d4.493879850359387!3d51.01761665411708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e42fa8bb9d4f%3A0x3988e07da32f573e!2sLeuvensesteenweg%20209%2C%202800%20Mechelen%2C%20Belgium!5e0!3m2!1sen!2s!4v1611076087137!5m2!1sen!2s"
